--- a/admin-dev/themes/default/css/bootstrap/_variables.scss
+++ b/admin-dev/themes/default/css/bootstrap/_variables.scss
@@ -19,7 +19,10 @@ $gray-lighter:           lighten(#000, 93.5%) ; //#eee
 // Brand colors
 // -------------------------
 
-$brand-primary:         #EF1778 ;
+//$brand-primary:         #EF1778 ; //rose Prestashop
+//$brand-primary: 		#1EAEC0 ; 	//bleu turquoise
+$brand-primary: 		#33556E ;
+
 $brand-success:         #5cb85c ;
 $brand-warning:         #f0ad4e ;
 $brand-danger:          #d9534f ;
